// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event Emitter HP With Backspace 1`] = `
Array [
  "Infinitive: to be - long",
  "[Present Simple] Eu: ",
  "[Present Simple] Eu: s",
  "[Present Simple] Eu: so",
  "[Present Simple] Eu: sou",
  "[Present Simple] Eu: sour",
  "[Present Simple] Eu: sourr",
  "[Present Simple] Eu: sour",
  "[Present Simple] Eu: sou",
  "Correct! [keyboard]",
  "[Present Simple] Eu: ",
  "s",
  "o",
  "u",
  "Press key to continue...",
  "r - repeat the answer",
  "Weekly Statistics:

",
]
`;

exports[`Event Emitter HP With Backspace 2`] = `
Array [
  "APP_STARTED",
  "EXERCISE_STARTED",
  "EXERCISE_DESCRIPTION_PRINTED",
  "EXERCISE_BODY_PRINTED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "ANSWER_SUBMITTED",
  "ANSWER_CHECKED",
  "KEY_PRESSED",
  "EXERCISE_NEXT",
  "APP_FINISHED",
]
`;

exports[`Event Emitter Happy Path 1`] = `
Array [
  "APP_STARTED",
  "EXERCISE_STARTED",
  "EXERCISE_DESCRIPTION_PRINTED",
  "EXERCISE_BODY_PRINTED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "ANSWER_SUBMITTED",
  "ANSWER_CHECKED",
  "KEY_PRESSED",
  "EXERCISE_NEXT",
  "APP_FINISHED",
]
`;

exports[`Event Emitter Happy Path 2`] = `
Array [
  "Infinitive: to be - long",
  "[Present Simple] Eu: ",
  "[Present Simple] Eu: s",
  "[Present Simple] Eu: so",
  "[Present Simple] Eu: sou",
  "Correct! [keyboard]",
  "[Present Simple] Eu: ",
  "s",
  "o",
  "u",
  "Press key to continue...",
  "r - repeat the answer",
  "Weekly Statistics:

",
]
`;

exports[`Event Emitter Unhappy Path 1`] = `
Array [
  "APP_STARTED",
  "EXERCISE_STARTED",
  "EXERCISE_DESCRIPTION_PRINTED",
  "EXERCISE_BODY_PRINTED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "KEY_PRESSED",
  "ANSWER_SUBMITTED",
  "ANSWER_CHECKED",
]
`;

exports[`Event Emitter Unhappy Path 2`] = `
Array [
  "Infinitive: to be - long",
  "[Present Simple] Eu: ",
  "[Present Simple] Eu: s",
  "[Present Simple] Eu: so",
  "[Present Simple] Eu: sow",
  "[Present Simple] Eu: sowr",
  "[Present Simple] Eu: sowro",
  "[Present Simple] Eu: sowron",
  "[Present Simple] Eu: sowrong",
  "[Present Simple] Eu: sowronga",
  "[Present Simple] Eu: sowrongan",
  "[Present Simple] Eu: sowrongans",
  "[Present Simple] Eu: sowrongansw",
  "[Present Simple] Eu: sowronganswe",
  "[Present Simple] Eu: sowronganswer",
  "Wrong! [keyboard]",
  "[Present Simple] Eu: ",
  "s",
  "o",
  "u",
  "Repeat: ",
]
`;
